barcodebuddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: barcodebuddy
  namespace: barcodebuddy
spec:
  type: ClusterIP
  selector:
    app: barcodebuddy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
