barcodebuddy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: barcodebuddy
  namespace: barcodebuddy
  annotations:
    tailscale.com/hostname: barcodebuddy
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - barcodebuddy
  rules:
    - host: barcodebuddy
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: barcodebuddy
                port:
                  number: 80
